trying to fix image wrap

--- a/csce242/assignments/assignment 3/styles.css
+++ b/csce242/assignments/assignment 3/styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 #m-content2 {
-    
+
 }
 
 .col1of6 {
@@ -48,7 +48,7 @@ body {
 }
 
 img {
-
+    float: left;
 }
 
 #main-nav ul {
